[display color video]: this commit adds in display of center rgb camera. Asan is detecting leaks in libusb. This could be an older version of libusb, and depthai... Leak does not appear to grow, which could indicate leak is occuring during initialization, since i'm only doing this once, i'll leave this for now...

--- a/pose_estimation/CMakeLists.txt
+++ b/pose_estimation/CMakeLists.txt
@@ -2,6 +2,7 @@ message("### Face Pose CMakeLists.txt ###")
 
 # Import Luxonis Libraries
 find_package(depthai 2.25.1 REQUIRED)
+find_package(OpenCV 4 REQUIRED)
 
 add_library(FacePose pose_estimation.cpp)
-target_link_libraries(FacePose PRIVATE depthai::opencv)
+target_link_libraries(FacePose PUBLIC depthai::opencv ${OpenCV_LIBS})
