--- a/process/CMakeLists.txt
+++ b/process/CMakeLists.txt
@@ -1,4 +1,4 @@
 message("### Process CMakeLists.txt ###")
 
 add_library(FacePoseProcess process.cpp)
-target_link_libraries(FacePoseProcess PRIVATE FacePose FacePoseServer)
+target_link_libraries(FacePoseProcess PUBLIC FacePose FacePoseServer)
