[opencv face pose estimation]: first prototype using face_detection_yunet_2023mar.onnx

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ link_libraries(glog::glog)
 
 # Camera
 add_subdirectory(camera)
+target_link_libraries(Camera PRIVATE common_flags)
 
 # Pose Estimation
 add_subdirectory(pose_estimation)
