--- a/camera/CMakeLists.txt
+++ b/camera/CMakeLists.txt
@@ -8,5 +8,6 @@ find_package(OpenCV 4 REQUIRED)
 add_library(LuxonisCamera luxonis_camera.cpp luxonis_camera.h)
 target_link_libraries(LuxonisCamera PUBLIC depthai::opencv ${OpenCV_LIBS})
 
+set(ACTIVE_CAMERA_LIBRARY LuxonisCamera)
 add_library(Camera base_camera.h)
-target_link_libraries(Camera PUBLIC ${OpenCV_LIBS} LuxonisCamera)
+target_link_libraries(Camera PUBLIC ${OpenCV_LIBS} ${ACTIVE_CAMERA_LIBRARY})
