--- a/pose_estimation/CMakeLists.txt
+++ b/pose_estimation/CMakeLists.txt
@@ -4,5 +4,10 @@ set(CMAKE_CXX_STANDARD 17)
 # Open CV
 find_package(OpenCV 4 REQUIRED)
 
-add_library(FacePose pose_estimation.cpp prior_box.h)
-target_link_libraries(FacePose PUBLIC Camera ${OpenCV_LIBS})
+add_library(OpenCVFacePose opencv_face_pose.cpp opencv_face_pose.h)
+target_link_libraries(OpenCVFacePose PUBLIC ${OpenCV_LIBS})
+
+set(ACTIVE_POSE_LIBRARY OpenCVFacePose)
+
+add_library(FacePose base_face_pose.h)
+target_link_libraries(FacePose PUBLIC ${OpenCV_LIBS} ${ACTIVE_POSE_LIBRARY})
